# sigaba

./: .gitignore  README.md  meson.build
data/: test.out  test.txt
doc/: Doxyfile.in  ECM MARK 2 and CCM MARK 1 - Part 1.html  ECM MARK 2 and CCM MARK 1 - Part 2.html  ECM MARK 2 and CCM MARK 1 - Part 3.html  ECM MARK 2 and CCM MARK 1.html  README.md  meson.build
doc/ECMApp/: ECMApp.html  ECMApp.java  ecmapp.txt
internal_method/: internal_mathod.cpp  internal_method.h  meson.build
sigaba/: LICENSE  main.cpp  meson.build  sigaba.cpp  sigaba.h
test_sigaba/: main.cpp  meson.build
